Added Catch of the day app

--- a/index.html
+++ b/index.html
@@ -301,7 +301,17 @@
                                 href="https://pshegde123.github.io/reactapp_rickandmortyapi/">Live Demo</a>
                             </p>
                         </div>
-                    </div>                   
+                    </div>   
+		<div class="card port-cards" style="width: 18rem;">
+                        <img class="card-img-top" src="assets/images/catch_of_the_day.png" alt="Page">
+                        <div class="card-body">
+                            <h4 class="card-title">Catch Of The Day</h4>
+                            <p class="card-text">React JS and Firebase based app to display and update seafood order.
+                            </p>
+                            <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/catch_of_the_day">Check
+                                    Github Repo</a></p>                                                        
+                        </div>
+                    </div>        			
                 </div>
             </div>
         </div>
