Added details about practice project Game Hub.

--- a/index.html
+++ b/index.html
@@ -311,7 +311,20 @@
                             <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/catch_of_the_day">Check
                                     Github Repo</a></p>                                                        
                         </div>
-                    </div>        			
+                    </div>      
+		<div class="card port-cards" style="width: 18rem;">
+                        <img class="card-img-top" src="assets/images/game_hub.png" alt="Page">
+                        <div class="card-body">
+                            <h4 class="card-title">Game Hub</h4>
+                            <p class="card-text">React JS, TypeScript, ChakraUI based app to search video game based on genre.
+                            </p>
+                            <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/game-hub2">Check
+                                    Github Repo</a></p>   
+			    <p><a target="_blank" style="color:red;"
+                                href="https://game-hub2-khaki.vercel.app/">Live Demo</a>
+                            </p>
+                        </div>
+                    </div>        
                 </div>
             </div>
         </div>
