Added Flexbox Demo and Monsters Rolodex projects

--- a/index.html
+++ b/index.html
@@ -324,6 +324,19 @@
                                 href="https://game-hub2-khaki.vercel.app/">Live Demo</a>
                             </p>
                         </div>
+                    </div>   
+		 <div class="card port-cards" style="width: 18rem;">
+                        <img class="card-img-top" src="assets/images/monsters_rolodex.png" alt="Page">
+                        <div class="card-body">
+                            <h4 class="card-title">Monsters Rolodex</h4>
+                            <p class="card-text">React JS based app to search a monster name from list.
+                            </p>
+                            <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/Monsters-Rolodex">Check
+                                    Github Repo</a></p>   
+			    <p><a target="_blank" style="color:red;"
+                                href="https://pshegde123.github.io/Monsters-Rolodex/">Live Demo</a>
+                            </p>
+                        </div>
                     </div>        
                 </div>
             </div>
@@ -407,6 +420,20 @@
 			    <p>
 				    <a target="_blank" style="color:red;"
                                 	href="https://pshegde123.github.io/Sunnyside_landing_page/">Live Demo</a>
+                            </p>
+                        </div>
+                    </div>
+			<div class="card port-cards" style="width: 18rem;">
+                        <img class="card-img-top" src="assets/images/flexbox_images.png" alt="Page">
+                        <div class="card-body">
+                            <h4 class="card-title">Flexbox Demo</h4>
+                            <p class="card-text">Responsive page using flexbox layout 
+                            </p>
+                            <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/simple_flexbox_demo">Check
+                                    Github Repo</a></p> 
+			    <p>
+				    <a target="_blank" style="color:red;"
+                                	href="https://pshegde123.github.io/simple_flexbox_demo/">Live Demo</a>
                             </p>
                         </div>
                     </div>
