--- a/index.html
+++ b/index.html
@@ -277,15 +277,15 @@
                 <hr style="width: 100%; background-color:darkgrey; height: 1px;" />                
                 <div class="container-grid d-flex justify-content-center">
                     <div class="card port-cards" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/images/JSQuoteGenerator.png" alt="Page">
+                        <img class="card-img-top" src="assets/images/Quotes.png" alt="Page">
                         <div class="card-body">
                             <h4 class="card-title">JS Random Quote Generator</h4>
                             <p class="card-text">Javascript based random quotes generator
                             </p>
-                            <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/random_quote_generator_jquery">Check
+                            <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/QuoteGenerator">Check
                                     Github Repo</a></p>
 							<p><a target="_blank" style="color:red;"
-                                href="https://pshegde123.github.io/random_quote_generator_jquery/">Live Demo</a>
+                                href="https://pshegde123.github.io/QuoteGenerator/">Live Demo</a>
                             </p>									
                         </div>
                     </div>
